chore: regenerate and bump openapi clients
