# devolutions-gateway/openapi/gateway-api.yaml
@@ -397,6 +397,7 @@ components:
       - gateway.jrl.read
       - gateway.config.write
       - gateway.heartbeat.read
+      - gateway.recording.delete
       - gateway.recordings.read
     AppTokenContentType:
       type: string
@@ -496,6 +497,7 @@ components:
       - hostname
       - version
       - running_session_count
+      - recording_storage_is_writeable
       properties:
         hostname:
           type: string
@@ -505,6 +507,21 @@ components:
           format: uuid
           description: This Gateway's unique ID
           nullable: true
+        recording_storage_available_space:
+          type: integer
+          format: int64
+          description: The remaining available space to store recordings, in bytes.
+          nullable: true
+          minimum: 0
+        recording_storage_is_writeable:
+          type: boolean
+          description: Whether the recording storage is writeable or not.
+        recording_storage_total_space:
+          type: integer
+          format: int64
+          description: The total space of the disk used to store recordings, in bytes.
+          nullable: true
+          minimum: 0
         running_session_count:
           type: integer
           description: Number of running sessions
